==> sreeeesanth/Stm32FlappyBird/Core/Src/st7789.c <==
#include "st7789.h"
#include <string.h>
#define HOR_LEN     5

static void ST7789_WriteCommand(uint8_t cmd)
{
    ST7789_Select();
    ST7789_DC_Clr();
    HAL_SPI_Transmit(&ST7789_SPI_PORT, &cmd, sizeof(cmd), HAL_MAX_DELAY);
    ST7789_UnSelect();
}

static void ST7789_WriteData(uint8_t *buff, size_t buff_size)
{
    ST7789_Select();
    ST7789_DC_Set();

    while (buff_size > 0) {
        uint16_t chunk_size = buff_size > 65535 ? 65535 : buff_size;
        #ifdef USE_DMA
            if (DMA_MIN_SIZE <= buff_size)
            {
                HAL_SPI_Transmit_DMA(&ST7789_SPI_PORT, buff, chunk_size);
                // Universally safer to check SPI state to ensure DMA and SPI are both finished
                while (HAL_SPI_GetState(&ST7789_SPI_PORT) != HAL_SPI_STATE_READY) {}
            }
            else
                HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
        #else
            HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
        #endif
        buff += chunk_size;
        buff_size -= chunk_size;
    }

    ST7789_UnSelect();
}

static void ST7789_WriteSmallData(uint8_t data)
{
    ST7789_Select();
    ST7789_DC_Set();
    HAL_SPI_Transmit(&ST7789_SPI_PORT, &data, sizeof(data), HAL_MAX_DELAY);
    ST7789_UnSelect();
}

static void ST7789_SetAddressWindow(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1)
{
    ST7789_Select();
    uint16_t x_start = x0 + X_SHIFT, x_end = x1 + X_SHIFT;
    uint16_t y_start = y0 + Y_SHIFT, y_end = y1 + Y_SHIFT;

    ST7789_WriteCommand(ST7789_CASET);
    {
        uint8_t data[] = {x_start >> 8, x_start & 0xFF, x_end >> 8, x_end & 0xFF};
        ST7789_WriteData(data, sizeof(data));
    }

    ST7789_WriteCommand(ST7789_RASET);
    {
        uint8_t data[] = {y_start >> 8, y_start & 0xFF, y_end >> 8, y_end & 0xFF};
        ST7789_WriteData(data, sizeof(data));
    }
    ST7789_WriteCommand(ST7789_RAMWR);
    ST7789_UnSelect();
}

void ST7789_Init(void)
{
    #ifdef USE_DMA
        memset(disp_buf, 0, sizeof(disp_buf));
    #endif
    HAL_Delay(10);
    ST7789_RST_Clr();
    HAL_Delay(10);
    ST7789_RST_Set();
    HAL_Delay(20);

    ST7789_WriteCommand(ST7789_COLMOD);
    ST7789_WriteSmallData(ST7789_COLOR_MODE_16bit);
    ST7789_WriteCommand(0xB2);
    {
        uint8_t data[] = {0x0C, 0x0C, 0x00, 0x33, 0x33};
        ST7789_WriteData(data, sizeof(data));
    }
    ST7789_SetRotation(ST7789_ROTATION);

    ST7789_WriteCommand(0XB7);
    ST7789_WriteSmallData(0x35);
    ST7789_WriteCommand(0xBB);
    ST7789_WriteSmallData(0x19);
    ST7789_WriteCommand(0xC0);
    ST7789_WriteSmallData (0x2C);
    ST7789_WriteCommand (0xC2);
    ST7789_WriteSmallData (0x01);
    ST7789_WriteCommand (0xC3);
    ST7789_WriteSmallData (0x12);
    ST7789_WriteCommand (0xC4);
    ST7789_WriteSmallData (0x20);
    ST7789_WriteCommand (0xC6);
    ST7789_WriteSmallData (0x0F);
    ST7789_WriteCommand (0xD0);
    ST7789_WriteSmallData (0xA4);
    ST7789_WriteSmallData (0xA1);

    ST7789_WriteCommand(0xE0);
    {
        uint8_t data[] = {0xD0, 0x04, 0x0D, 0x11, 0x13, 0x2B, 0x3F, 0x54, 0x4C, 0x18, 0x0D, 0x0B, 0x1F, 0x23};
        ST7789_WriteData(data, sizeof(data));
    }

    ST7789_WriteCommand(0xE1);
    {
        uint8_t data[] = {0xD0, 0x04, 0x0C, 0x11, 0x13, 0x2C, 0x3F, 0x44, 0x51, 0x2F, 0x1F, 0x1F, 0x20, 0x23};
        ST7789_WriteData(data, sizeof(data));
    }
    ST7789_WriteCommand (ST7789_INVOFF);
    ST7789_WriteCommand (ST7789_SLPOUT);
    ST7789_WriteCommand (ST7789_NORON);
    ST7789_WriteCommand (ST7789_DISPON);

    HAL_Delay(50);
    ST7789_Fill_Color(BLACK);
}

void ST7789_Fill_Color(uint16_t color)
{
    ST7789_SetAddressWindow(0, 0, ST7789_WIDTH - 1, ST7789_HEIGHT - 1);
    ST7789_Select();

    #ifdef USE_DMA
        // Swap bytes because STM32 is Little Endian but Display expects Big Endian
        uint16_t swapped_color = (color >> 8) | (color << 8);

        uint32_t pixels_per_chunk = ST7789_WIDTH * HOR_LEN;
        for (uint32_t i = 0; i < pixels_per_chunk; i++) {
            disp_buf[i] = swapped_color;
        }

        uint32_t total_pixels = ST7789_WIDTH * ST7789_HEIGHT;
        uint32_t sent = 0;

        ST7789_DC_Set();
        while (sent < total_pixels) {
            uint32_t to_send = ((total_pixels - sent) > pixels_per_chunk) ? pixels_per_chunk : (total_pixels - sent);
            HAL_SPI_Transmit_DMA(&ST7789_SPI_PORT, (uint8_t *)disp_buf, to_send * 2);
            while (HAL_SPI_GetState(&ST7789_SPI_PORT) != HAL_SPI_STATE_READY) {}
            sent += to_send;
        }
    #else
        uint16_t i, j;
        for (i = 0; i < ST7789_WIDTH; i++) {
            for (j = 0; j < ST7789_HEIGHT; j++) {
                uint8_t data[] = {color >> 8, color & 0xFF};
                ST7789_WriteData(data, sizeof(data));
            }
        }
    #endif
    ST7789_UnSelect();
}
